# loom-ldapbrowser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USER_MANUAL.md
.github/workflows/: ci.yml  release.yml
assets/: example-directory.ldif
config/: default.toml
config/themes/: dark.toml  light.toml  nord.toml  solarized.toml
crates/loom/: Cargo.toml  build.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: auth.rs  bulk.rs  connection.rs  credentials.rs  dn.rs  entry.rs  error.rs  filter.rs  lib.rs  modify.rs  offline.rs  schema.rs  search.rs  server_detect.rs  tls.rs  tree.rs  vault.rs
crates/loom-core/src/export/: csv.rs  json.rs  ldif.rs  mod.rs  xlsx.rs
crates/loom-core/src/import/: csv.rs  json.rs  ldif.rs  mod.rs  xlsx.rs
crates/loom-core/tests/: import_export.rs
crates/loom-ldapbrowser/: Cargo.toml
crates/loom-ldapbrowser/src/: main.rs
crates/loom-tui/: Cargo.toml
crates/loom-tui/src/: action.rs  app.rs  component.rs  config.rs  event.rs  focus.rs  keymap.rs  lib.rs  theme.rs  tui.rs
crates/loom-tui/src/components/: about_popup.rs  attribute_editor.rs  attribute_picker.rs  bulk_update_dialog.rs  cert_trust_dialog.rs  command_panel.rs  confirm_dialog.rs  connect_dialog.rs  connection_form.rs  connections_tree.rs  context_menu.rs  create_entry_dialog.rs  credential_prompt.rs  detail_panel.rs  export_dialog.rs  help_popup.rs  layout_bar.rs  log_panel.rs  mod.rs  new_connection_dialog.rs  popup.rs  schema_viewer.rs  search_dialog.rs  status_bar.rs  tab_bar.rs  tree_panel.rs  vault_password_dialog.rs
crates/loom-tui/src/widgets/: breadcrumb.rs  fuzzy_input.rs  mod.rs  spinner.rs
crates/loom/src/: main.rs
tests/fixtures/: sample.csv  sample.json  sample.ldif
tests/integration/: docker-compose.yml
