[package]
name = "loom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core LDAP client library for loom-ldapbrowser"

[dependencies]
ldap3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
csv = { workspace = true }
rust_xlsxwriter = { workspace = true }
calamine = { workspace = true }
keyring = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
sha2 = { workspace = true }
x509-parser = { workspace = true }
