[package]
name = "loom-ldapbrowser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A terminal-based LDAP browser"

[[bin]]
name = "loom-ldapbrowser"
path = "src/main.rs"

[dependencies]
loom-tui = { workspace = true }
loom-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
rustls = { workspace = true }
rpassword = { workspace = true }

[build-dependencies]
winresource = "0.1"
