[package]
name = "loom-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TUI framework and components for Loom"

[dependencies]
loom-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-tree-widget = { workspace = true }
tui-textarea = { workspace = true }
tui-logger = { workspace = true }
nucleo = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
arboard = { workspace = true }
